--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JQuery Practice</title>
 </head>
 <body>
-    
+    <div class="jumbotron">
+        <img src="backgrounds/h" alt="">
+
+    </div>
 </body>
 </html>
