--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="jumbotron">
-        <img src="backgrounds/h" alt="">
+        <img src="images/h_img.jpg" alt="header image">
+        
 
     </div>
 </body>
