added content for the header

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>JQuery Practice</title>
 </head>
 <body>
+    <div class="header">
+        <img src="assets/logo/logo.png" alt="header image">
+        <p class="topbanner">WELCOME</p>
+        <p class="topbanner">TO DELANI STUDIO</p>
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+        <br>
+        <br>
+        <br>
+        <img src="assets/mouse_click.png" alt="">
+    </div>
     <div class="jumbotron">
-        <img src="images/h_img.jpg" alt="header image">
-        
-
+        <h2>ABOUT US</h2>
+        <p class="content">
+            
+        </p>
     </div>
 </body>
 </html>
