--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
         <br>
         <img src="assets/mouse_click.png" alt="">
     </div>
-    <div class="jumbotron">
-        <h2>ABOUT US</h2>
-        <p class="content">
-            
-        </p>
+    <div class="container">
+        <div class="jumbotron">
+            <h2>ABOUT US</h2>
+            <p class="content">
+                When you work with us, you are part of a team of committed collaborators. All aspects of our
+                software development process are integrated, interactive and agile
+            </p>
+            <p class="content"> 
+                Our approach unifies design, development and product management to create exceptional products.
+            </p>
+            <p class="content">
+                We start each project by understanding your business goals, the user's needs and the product requirements.
+            </p>
+            <p class="content">
+                Then we help translate them into effective and elegant solutions.
+            </p>
+        </div>
     </div>
 </body>
 </html>
