layout changes in background images on css and added mailchimp

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div class="container-fluid">
         <div class="jumbotron-fluid">
             <div class="overlay">
-                <img src="images/h_img.jpg" alt="logo" class="mx-auto d-block">
                 <h1 class="text-white text-center welcome h-text">Welcome</h1>
                 <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
                 <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
@@ -19,6 +18,7 @@
                 <a href="#about"><img src="assets/mouse_click.png" class="mx-auto d-block click" alt="mouse click" id="bounce"></a>
             </div>
         </div>
+        <br>
             <div class="about" id="about">
                 <h1 class="text-center b-text" >ABOUT US</h1><br>
                 <p class="text-center m-text">When you work with us, you are a part of a team of committed collaborators. All
@@ -190,4 +190,7 @@
                 <footer class="text-center">Delani Studio <br> 2020</footer>
             </div>
         </body>
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+        <script src="js/script.js"></script>
+        <script src="js/mailchimp.js"></script>
     </html>
