--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>JQuery Practice</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="jumbotron-fluid">
             <div class="overlay">
-                <img src="images/h_img.jpg" alt="logo" class="mx-auto d-block">
                 <h1 class="text-white text-center welcome h-text">Welcome</h1>
                 <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
                 <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
