--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="container">
         <div class="jumbotron-fluid">
             <div class="overlay">
+                <img src="assets/logo/logo.png" alt="logo">
+                <br>
                 <h1 class="text-white text-center welcome h-text">Welcome</h1>
                 <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
                 <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
