--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
     <title>JQuery Practice</title>
 </head>
 <body>
     <div class="container">
         <div class="jumbotron-fluid">
             <div class="overlay">
-                <img src="assets/logo/logo.png" alt="logo">
-                <br>
-                <h1 class="text-white text-center welcome h-text">Welcome</h1>
+                <img src="assets/logo/logo.png" alt="logo" id="logo" height="50px"  width="auto">
+                <h1 class="text-white text-center welcome h-text">WELCOME</h1>
                 <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
                 <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
                 ENVIRONMENT</h6>
@@ -42,6 +43,7 @@
                 </div>
             </div>
             <div class="what-we-do text-center">
+                <script src="js/script.js"></script>
                 <h1 class="b-text">WHAT WE DO</h1><br><br>
                 <div class="col-md-12">
                     <div class="row">
